# orderly-set

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yaml
benchmarks/: ordered_set_benchmark.py
orderly_set/: __init__.py  sets.py
tests/: __init__.py  test_ordered_set_1.py  test_ordered_set_2.py  test_ordered_set_3.py
